# voxel_water

./: .gitignore  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
assets/: quad.wgsl
src/: chunk.rs  double_buffered.rs  flycam.rs  input.rs  instancing.rs  main.rs  mesher.rs  texture_array.ktx2  water.rs
src/block/: mod.rs
src/chunk/: double_buffered.rs  index.rs  liquid_tick.rs  masks.rs  mod.rs
src/chunk/liquid_tick/: action.rs
src/jumpscare/: ghost.ktx2  mod.rs
src/mesher/: quad.rs
src/render/: mesher.rs  mod.rs  pipeline.rs  quad.wgsl  texture_array.ktx2
src/render/texture_array/: mod.rs
