[package]
name = "voxel_water"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
bevy = "0.17.2"
enum-map = "2.7.3"
itertools = "0.14.0"
ndshape = "0.3.0"
nonmax = "0.5.5"
rand = "0.9.2"
