[package]
name = "voxel_water"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"

[dependencies]
bevy = "0.17.2"
bytemuck = "1.24.0"
enum-map = "2.7.3"
ndshape = "0.3.0"
rand = "0.9.2"
